--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,28 @@
     margin: 0 auto;
 }
 
+/* Start General Rules In All Sections  */
+.section h2 {
+    text-transform: capitalize;
+    margin: 0;
+    padding: 0;
+    font-size: var(--h2-font-size);
+    color: var(--h2-color);
+    letter-spacing: -5px;
+    text-align: center;
+}
+
+.section .quote {
+    color: #777;
+    text-align: center;
+    margin: -2rem 0 0 0;
+}
+
+.section .quote::first-letter {
+    text-transform: capitalize;
+}
+/* End General Rules In All Sections  */
+
 /* Start Header Part */
 header {
     height: 4rem;
@@ -198,30 +220,6 @@ i {
 
 /* Start Services Part  */
 
-/* Start General Rules In All Sections  */
-
-.section h2 {
-    text-transform: capitalize;
-    margin: 0;
-    padding: 0;
-    font-size: var(--h2-font-size);
-    color: var(--h2-color);
-    letter-spacing: -5px;
-    text-align: center;
-}
-
-.section .quote {
-    color: #777;
-    text-align: center;
-    margin: -2rem 0 0 0;
-}
-
-.section .quote::first-letter {
-    text-transform: capitalize;
-}
-
-/* End General Rules In All Sections  */
-
 .services .content {
     padding: 4rem 0;
     display: grid;
@@ -365,8 +363,8 @@ i {
     width: 100%;
 }
 
-.about .content .desc {
-    width: 40vw;
+.about .container .content .desc {
+    width: 55%;
     padding: 1rem 0 0 1rem;
     display: flex;
     flex-direction: column;
@@ -445,10 +443,29 @@ footer a {
 /* End Footer Part */
 
 @media (max-width: 786px) {
+
+    :root {
+        --h2-font-size: 5rem;
+    }
+
+    .section h2 {
+        text-align: center;
+    }
+
+    .section .quote {
+        color: #777;
+        text-align: center;
+        margin: -1rem 0 0 0;
+    }
+
     .container {
         width: 95vw;
         margin: 0;
         padding: 0;
+    }
+
+    .services .content {
+        gap: 0;
     }
 
     .services .service {
@@ -487,7 +504,7 @@ footer a {
     
     .about .content .desc {
         padding: 1rem;
-        width: 90%;
+        width: 100%;
         text-align: center;
     }
     
