--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ i {
 
 .project .project-info {
     padding: 1rem;
+    height: 45%;
 }
 
 .project h3 {
@@ -335,6 +336,7 @@ i {
 
 .project p {
     color: #777;
+    margin-bottom: 0;
 }
 
 .project:hover img {
