--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,37 @@ i {
     width: 100%;
 }
 
-.about .container .content .desc {
-    width: 55%;
+.about .content .desc {
+    width: calc(100% - 30rem);
     padding: 1rem 0 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+@media (max-width: 992px) {
+    .about .content {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+
+    .about .content .image-holder::after,
+    .about .content .image-holder::before {
+        display: none;
+    }
+
+    .about .content .desc {
+        padding: 0;
+        margin-top: 2rem;
+        width: 70vw;
+    }
+
+    .about hr {
+        align-self: center;
+        margin: 1rem 0;
+    }
 }
 
 .about .content .desc p:first-child {
@@ -499,34 +524,3 @@ footer a {
 
 }
 
-@media (max-width: 992px) {
-    .about .content {
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        gap: 4rem;
-        padding-top: 3rem;
-    }
-
-    .about .content .image-holder::after {
-        display: none;
-    }
-    
-    .about .content .image-holder::before {
-        display: none;
-    }
-    
-    .about .content .desc {
-        padding: 1rem;
-        width: 100%;
-        text-align: center;
-    }
-    
-    .about .content .desc p {
-        padding: 2rem 0;
-    }
-
-    .about hr {
-        margin: 0 auto;
-    }
-}
