add id's for section and move to them from navbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@
     --section-background: #F6F6F6;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     width: 90vw;
     max-width: 1140px;
