--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,43 @@ html {
 .section .quote::first-letter {
     text-transform: capitalize;
 }
+
 /* End General Rules In All Sections  */
+
+.goto-top {
+    position: fixed;
+    width: 4rem;
+    height: 4rem;
+    background-color: var(--second-color);
+    border-radius: 50%;
+    bottom: 4rem;
+    right: 4rem;
+    border: 2px solid #fffefe;
+    animation-name: top-and-down;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    z-index: 10;
+}
+
+.goto-top a {
+    text-decoration: none;
+    font-size: 2rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes top-and-down {
+    0%, 100% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
 
 /* Start Header Part */
 header {
